# AIFootballPodcast

./: .gitignore  AGENTS.md  README.md  agent.py  deploy.sh  deploy_vertex.py  pyproject.toml  requirements.txt  run.py  run_local.py  test_chatterbox.py
assets/: tournaments_id.json
modules/: __init__.py  agents_podcast.py  callbacks.py  constants.py  langgraph_agent.py  tools.py  tts.py  utils.py
tests/: test_langgraph_agent.py  test_matches.py  test_tools.py  test_tts.py  test_utils.py
