[project]
name = "aifootballpodcast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.9",
    "python-dotenv>=1.2.1",
    "qwen-tts",
    "requests>=2.32.5",
    "torch",
    "torchaudio",
    "transformers",
    "hf-transfer",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.uv.extra-build-dependencies]
flash-attn = ["torch"]
