[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aifootballpodcast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.9",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "torch",
    "torchaudio",
    "transformers",
    "duckduckgo-search>=8.1.1",
    "chatterbox-tts>=0.1.3",
    "pandas>=2.2.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]


[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
